--- a/frontend/.prettierrc.json
+++ b/frontend/.prettierrc.json
@@ -1,8 +1,9 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc",
-  "semi": false,
+  "semi": true,
   "tabWidth": 2,
-  "singleQuote": true,
+  "useTabs": false,
+  "singleQuote": false,
   "printWidth": 100,
-  "trailingComma": "none"
+  "trailingComma": "es5"
 }
