--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "pinia": "^2.0.32",
