--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,8 @@
     "@types/leaflet": "^1.9.3",
     "@types/node": "^18.15.3",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vitest/coverage-c8": "^0.29.7",
+    "@vitest/coverage-istanbul": "^0.29.7",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.3.0",
